--- a/index.html
+++ b/index.html
@@ -88,24 +88,24 @@
 
   <script>
     const items = [
-      { word: "bedroom", img: "images/01_bedroom.svg" },
-      { word: "chair", img: "images/02_chair.svg" },
-      { word: "table", img: "images/03_table.svg" },
-      { word: "painting", img: "images/04_painting.svg" },
-      { word: "armchair", img: "images/05_armchair.svg" },
-      { word: "sofa", img: "images/06_sofa.svg" },
-      { word: "bookcase", img: "images/07_bookcase.svg" },
-      { word: "clock", img: "images/08_clock.svg" },
-      { word: "mat", img: "images/09_mat.svg" },
-      { word: "mirror", img: "images/10_mirror.svg" },
-      { word: "phone", img: "images/11_phone.svg" },
-      { word: "computer", img: "images/12_computer.svg" },
-      { word: "desk", img: "images/13_desk.svg" },
-      { word: "lamp", img: "images/14_lamp.svg" },
-      { word: "bed", img: "images/15_bed.svg" },
-      { word: "door", img: "images/16_door.svg" },
-      { word: "teddy", img: "images/18_teddy.svg" },
-      { word: "bike", img: "images/19_bike.svg" },
+      { word: "bedroom", img: "01_bedroom.svg" },
+      { word: "chair", img: "02_chair.svg" },
+      { word: "table", img: "03_table.svg" },
+      { word: "painting", img: "04_painting.svg" },
+      { word: "armchair", img: "05_armchair.svg" },
+      { word: "sofa", img: "06_sofa.svg" },
+      { word: "bookcase", img: "07_bookcase.svg" },
+      { word: "clock", img: "08_clock.svg" },
+      { word: "mat", img: "09_mat.svg" },
+      { word: "mirror", img: "10_mirror.svg" },
+      { word: "phone", img: "11_phone.svg" },
+      { word: "computer", img: "12_computer.svg" },
+      { word: "desk", img: "13_desk.svg" },
+      { word: "lamp", img: "14_lamp.svg" },
+      { word: "bed", img: "15_bed.svg" },
+      { word: "door", img: "16_door.svg" },
+      { word: "teddy", img: "18_teddy.svg" },
+      { word: "bike", img: "19_bike.svg" },
     ];
 
     const image = document.getElementById("objectImage");
@@ -171,4 +171,5 @@
     showItem();
   </script>
 </body>
+
 </html>
